syntax = "proto3";

package payload.manager.metadata.v1;

option go_package = "github.com/yourorg/payload-manager/api/metadata/v1;payloadmetadatav1";
option java_multiple_files = true;
option java_package = "com.yourorg.payload.manager.metadata.v1";
option java_outer_classname = "PayloadMetadataProto";

import "google/protobuf/timestamp.proto";


// ============================================================
// ENUMS
// ============================================================

// Storage tier where payload currently resides
enum Tier {
  TIER_UNSPECIFIED = 0;

  // L0 - Device memory (CUDA)
  TIER_GPU = 1;

  // L1 - Host memory
  TIER_RAM = 2;

  // L2 - Local disk (NVMe / SSD)
  TIER_DISK = 3;

  // L3 - Remote object store (S3 / MinIO)
  TIER_OBJECT_STORE = 4;
}


// Compression algorithm applied at rest
enum Compression {
  COMPRESSION_UNSPECIFIED = 0;

  // No compression
  COMPRESSION_NONE = 1;

  // Fast spill compression
  COMPRESSION_LZ4 = 2;

  // Better ratio, moderate CPU
  COMPRESSION_ZSTD = 3;
}


// Logical format of the payload
// (Manager is blob-based but format-aware)
enum PayloadFormat {
  FORMAT_UNSPECIFIED = 0;

  // Raw opaque binary blob
  FORMAT_RAW = 1;

  // Future extensibility
  FORMAT_ARROW_IPC = 2;
  FORMAT_PARQUET = 3;
  FORMAT_FLATBUFFER = 4;
}


// Current lifecycle state
enum PayloadState {
  STATE_UNSPECIFIED = 0;

  // Newly created, in hot tier
  STATE_ACTIVE = 1;

  // Spill requested but not complete
  STATE_SPILLING = 2;

  // Persisted to durable tier
  STATE_DURABLE = 3;

  // Marked for eviction
  STATE_EVICTING = 4;

  // Removed from system
  STATE_DELETED = 5;
}



// ============================================================
// MAIN METADATA MESSAGE
// ============================================================

message PayloadMetadata {

  // ----------------------------------------------------------------
  // Identity
  // ----------------------------------------------------------------

  // 128-bit UUID stored as raw bytes
  // Must be exactly 16 bytes
  bytes uuid = 1;

  // Human-readable tag (optional)
  string name = 2;

  // Optional grouping ID (e.g., recording session)
  string group_id = 3;


  // ----------------------------------------------------------------
  // Size + Layout
  // ----------------------------------------------------------------

  // Original uncompressed size in bytes
  uint64 size_bytes = 4;

  // Compressed size (if applicable)
  uint64 compressed_size_bytes = 5;

  // Logical format of payload
  PayloadFormat format = 6;

  // Compression applied at rest
  Compression compression = 7;


  // ----------------------------------------------------------------
  // Tier + Location
  // ----------------------------------------------------------------

  // Current primary tier
  Tier current_tier = 8;

  // All tiers where payload currently exists (replication / promotion)
  repeated Tier available_tiers = 9;

  // Path for disk tier (if applicable)
  string disk_path = 10;

  // Object key for S3/MinIO (if applicable)
  string object_key = 11;


  // ----------------------------------------------------------------
  // Lifecycle
  // ----------------------------------------------------------------

  PayloadState state = 12;

  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp last_accessed_at = 14;
  google.protobuf.Timestamp last_spilled_at = 15;

  // Access counter (for eviction policy)
  uint64 access_count = 16;


  // ----------------------------------------------------------------
  // Integrity
  // ----------------------------------------------------------------

  // Optional checksum (e.g., SHA256 hex string)
  string checksum = 17;

  // If true, must be persisted before eviction from hot tier
  bool require_durability = 18;

  // If true, cannot be automatically evicted
  bool pinned = 19;


  // ----------------------------------------------------------------
  // Spill + Backpressure Observability
  // ----------------------------------------------------------------

  // True if currently in spill queue
  bool spill_pending = 20;

  // Spill attempt count
  uint32 spill_attempts = 21;

  // Last spill error (if any)
  string last_spill_error = 22;


  // ----------------------------------------------------------------
  // Extensibility
  // ----------------------------------------------------------------

  // Arbitrary key-value metadata
  map<string, string> attributes = 23;
}
